dynamic-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dynamic-auth
  name: dynamic-auth-service
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: dynamic-auth
  type: ClusterIP
status:
  loadBalancer: {}
