ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    certmanager.k8s.io/cluster-issuer: 'letsencrypt'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - fgr-kubernetes-demo.northcentralus.cloudapp.azure.com
      secretName: fgr-budget
  rules:
    - host: fgr-kubernetes-demo.northcentralus.cloudapp.azure.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: frontend-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: backend-service
              servicePort: 4500
